add: fetching modules data from api

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -1,1 +1,12 @@
 @import "~antd/dist/antd.less";
+
+.content {
+   background-image: url(./assets/Background.png);
+   background-size: contain;
+   background-repeat: no-repeat;
+   height: 100vh;
+}
+
+.textGradient {
+   color: #80ffea;
+}
