add: showing modules and classes

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -10,3 +10,17 @@
 .textGradient {
    color: #80ffea;
 }
+
+.scrollableModules {
+   overflow-y: scroll;
+   height: 70vh;
+}
+
+.classCard {
+   display: flex;
+   width: auth;
+   justify-content: space-between;
+   align-items: center;
+   border-top: solid 1px white;
+   padding: 10px 0 5px 0;
+}
