--- a/web/src/App.less
+++ b/web/src/App.less
@@ -1,10 +1,14 @@
 @import "~antd/dist/antd.less";
 
 .content {
+   height: auto;
+}
+
+.heroBackground {
+   height: 80vh;
    background-image: url(./assets/Background.png);
-   background-size: contain;
+   background-size: cover;
    background-repeat: no-repeat;
-   height: 100vh;
 }
 
 .textGradient {
@@ -18,9 +22,15 @@
 
 .classCard {
    display: flex;
-   width: auth;
    justify-content: space-between;
    align-items: center;
    border-top: solid 1px white;
    padding: 10px 0 5px 0;
+}
+
+.colapseCard {
+}
+
+.textRed {
+   color: #ff9580;
 }
