add: get token from api

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -34,3 +34,17 @@
 .textRed {
    color: #ff9580;
 }
+
+.headerRight {
+   margin-left: auto;
+}
+
+.header {
+   display: flex;
+   height: 70px;
+   align-items: center;
+}
+
+.modalInput {
+   margin-bottom: 10px;
+}
