--- a/web/src/pages/Admin/Admin.less
+++ b/web/src/pages/Admin/Admin.less
@@ -1,1 +1,13 @@
 @import "~antd/dist/antd.less";
+
+.select {
+   margin: 20px 10px 20px 10px;
+}
+
+.table {
+   width: 70vw;
+}
+
+.modalInput {
+   margin: 10px 0 10px 0;
+}
