--- a/web/src/components/Hero/Hero.less
+++ b/web/src/components/Hero/Hero.less
@@ -6,7 +6,7 @@
 
 .heroBackground {
    height: 80vh;
-   background-image: url(../../assets/Background.png);
+   background-image: url(../../assets/bg2.png);
    background-size: cover;
    background-repeat: no-repeat;
 }
