--- a/web/src/components/ModulesSection/ModulesSection.less
+++ b/web/src/components/ModulesSection/ModulesSection.less
@@ -1,5 +1,12 @@
 @import "~antd/dist/antd.less";
 
+.moduleBackground {
+   height: 90vh;
+   background-image: url(../../assets/bg1.png);
+   background-size: cover;
+   background-repeat: no-repeat;
+}
+
 .scrollableModules {
    overflow-y: scroll;
    height: 70vh;
